[Feat/auth user roles] - security role 추가 (#91)
* :sparkles: feat : add UserRole to User entity

* :hammer: chore : add role to `users` scheme

* :sparkles: feat : add user_role claims to jwt access-token

* :white_check_mark: test : update jwt token creation logic